updated the app

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -25,9 +25,10 @@
     
     <p>It has the following functionalities:</p>
     <ol>
-        <li>A POST request to the path /predict with a sent photograph returns the probability of belonging to each of the possible classes (supporting 1 or more images).</li>
-        <li>A GET request to the path /info retrieves a list of currently supported classes that the model can currently detect.</li>
-        <li>By calling /stats, the user will receive information in JSON format about the number of successful predictions for the last 10 days for each class.</li>
+        <li>Upload a photo and get the chances of it being one of our recognized soda bottles.</li>
+        <li>Explore the list of soda bottles our system can identify.</li>
+        <li>Check recent stats on successfully executed predictions for each soda bottle over the past 10 days.</li>
     </ol>
+
 </body>
 </html>
